completed first endpoint

--- a/package.json
+++ b/package.json
@@ -31,6 +31,6 @@
             "last 1 safari version"
         ]
     },
-    "main": "./server/server.js",
+    "main": "server/server.js",
     "proxy": "http://localhost:5000"
 }
